Fix avatar cropping (?)

--- a/app/assets/stylesheets/avatar.css
+++ b/app/assets/stylesheets/avatar.css
@@ -16,6 +16,8 @@
 
 #preview-avatar img {
     object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 #input-image {
